--- a/TODO
+++ b/TODO
@@ -19,7 +19,7 @@
 
 --Done-- * Generate random food 
 
-* Allow snake to eat food when food becomes available
-* Upon eating the food, snake should grow tall
+--DONE-- * Allow snake to eat food when food becomes available
+--DONE-- * Upon eating the food, snake should grow tall
 * If snake touches itself or the walls, the game should be over
 * Add a scoring mechanism
