--- a/TODO
+++ b/TODO
@@ -27,4 +27,8 @@
 
 --DONE-- * If snake touches itself the game should be over
 
-* If snake touches any of the four wall the game should be over
+--DONE-- * If snake touches any of the four wall the game should be over
+
+--DONE-- * special food will create after 5 normal food
+
+--DONE-- * if snake eats special food score will increase by 5
